--- a/CinemaTicket/CinemaTicket.csproj
+++ b/CinemaTicket/CinemaTicket.csproj
@@ -251,8 +251,8 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\moives-page.js" />
-    <Content Include="Scripts\moviesSearch.js" />
+    <EmbeddedResource Include="Scripts\moives-page.js" />
+    <EmbeddedResource Include="Scripts\moviesSearch.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\_references.js" />
