电影信息页面

--- a/CinemaTicket/CinemaTicket.csproj
+++ b/CinemaTicket/CinemaTicket.csproj
@@ -216,6 +216,8 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MovieModels.cs" />
+    <Compile Include="MovieControl\MovieInfo.cs" />
+    <Compile Include="MovieControl\TinyMovie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -223,13 +225,23 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\jquery-ui.css" />
-    <Content Include="Content\movie-index.css" />
+    <EmbeddedResource Include="Content\movie-index.css" />
+    <Content Include="Content\movie-Info.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Content\Site.css" />
-    <Content Include="img\leishen.jpg" />
-    <Content Include="img\mizhan.jpg" />
+    <EmbeddedResource Include="Content\Site.css" />
+    <Content Include="MovieImage\假如王子睡着了.jpg" />
+    <Content Include="MovieImage\妖猫传.jpg" />
+    <Content Include="MovieImage\寻梦环游记.jpg" />
+    <Content Include="MovieImage\帕丁顿熊.jpg" />
+    <Content Include="MovieImage\心理罪之城市之光.jpg" />
+    <Content Include="MovieImage\机器之血.jpg" />
+    <Content Include="MovieImage\至暗时刻.jpg" />
+    <Content Include="MovieImage\芳华.jpg" />
+    <Content Include="MovieImage\雷神.jpg" />
+    <Content Include="MovieImage\密战.jpg" />
+    <Content Include="MovieImage\正义联盟.jpg" />
     <Content Include="Scripts\ai.0.22.9-build00167.js" />
     <Content Include="Scripts\ai.0.22.9-build00167.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -298,10 +310,11 @@
     <Content Include="Views\Shared\_Layout - Movie.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\_Movies.cshtml" />
+    <Content Include="Views\Movie\MovieInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="MovieImage\" />
+    <Folder Include="img\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
