--- a/CinemaTicket/CinemaTicket.csproj
+++ b/CinemaTicket/CinemaTicket.csproj
@@ -232,6 +232,7 @@
     <Content Include="Global.asax" />
     <EmbeddedResource Include="Content\Site.css" />
     <Content Include="MovieImage\假如王子睡着了.jpg" />
+    <Content Include="MovieImage\夺金四贱客.jpg" />
     <Content Include="MovieImage\妖猫传.jpg" />
     <Content Include="MovieImage\寻梦环游记.jpg" />
     <Content Include="MovieImage\帕丁顿熊.jpg" />
@@ -249,6 +250,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="MovieControl\CinemaList.json" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.12.4.min.map" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
