--- a/CinemaTicket/Web.config
+++ b/CinemaTicket/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CinemaTicket-20171118104508.mdf;Initial Catalog=aspnet-CinemaTicket-20171118104508;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="MovieDBContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Movies.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="MovieOrderModel" connectionString="data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Movies.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -28,9 +29,13 @@
   </system.web>
   <system.webServer>
     <modules>
+      <remove name="FormsAuthenticationModule" />
+      <remove name="RoleManager" />
+      <!--
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
+      -->
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
